# Utils

./: .gitignore  CMakeLists.txt  Clone.hpp  Comparable.hpp  Makefile  Makefile.sources  PointersContainers.hpp  Sources.cmake  anyoption.cpp  anyoption.h  base64.cpp  base64.h  chrono.cpp  chrono.h  command.cpp  command.h  config_file.cpp  config_file.h  config_file_example.cfg  encodings.h  fifo.cpp  fifo.h  file_mngt.cpp  file_mngt.h  log.h  option.h  protocol.cpp  state_machine.cpp  state_machine.cpp.old  state_machine.h  state_machine.h.old  ticks.cpp  ticks.h  types.h  util.cpp  util.h  zhelpers.2.h  zhelpers.h  zhelpers2.2.h
args/: CommandArgs.cpp  CommandArgs.h  Sources.cmake
commaker/: server_head.h  server_impl.h
configfile/: ConfigFile.cmake  ConfigFile.cpp  ConfigFile.h  ConfigFileEntry.cpp  ConfigFileEntry.h  ConfigFileValue.h  Sources.cmake  generate.py  generator.py
configfile/CppHeaderParser/: CppHeaderParser3.py  repr.py
configfile/CppHeaderParser/examples/: .readSampleClass.py.swo
configfile/templates/: ConfigFile.cpp  ConfigFile.h
configfile/test/: CMakeLists.txt  ConfigFile.yml  Something.cpp  Something.h  main.cpp
configfile/test/config/: ConfigFile.yml
configfile/test/something/: Other.h  Something.h
encodings/: Encodings.cpp  Encodings.h  Sources.cmake
exes/: test_log.cpp
graph/: Curve.cpp  Curve.h  CurveEntry.cpp  CurveEntry.h  Graph.cpp  Graph.h  Sources.cmake  ZMQGraph.cpp  ZMQGraph.h
http/: HttpClient.cpp  HttpClient.h  HttpMultipartClient.cpp  HttpMultipartClient.h  HttpMultipartServer.cpp  HttpMultipartServer.h  Sources.cmake
json/: JsonClient.h  JsonClientBase.cpp  JsonClientBase.h  JsonClientProxy.cpp  JsonClientProxy.h  JsonParameter.cpp  JsonParameter.h  JsonParameters.cpp  JsonParameters.h  JsonServer.cpp  JsonServer.h  JsonUtil.cpp  JsonUtil.h  Sources.cmake  json.def
jsoncpp/: CMakeLists.txt
logging/: CSV.cpp  CSV.h  Logger.cpp  Logger.h  Sources.cmake  log.h  term_display.cpp  term_display.h
observer/: Observer.h  Sources.cmake  Subject.cpp  Subject.h
patterns/: AbstractFactory.h  GenericFactory.h  Value.h
portaudio/: CMakeLists.txt
portaudio/include/: pa_win_wmme.h  portaudio.h
portaudio/src/common/: pa_util.h
portaudio/src/hostapi/dsound/: pa_win_ds.c
portaudio/src/hostapi/wasapi/: pa_win_wasapi.c
portaudio/src/hostapi/wdmks/: pa_win_wdmks.c
portaudio/src/hostapi/wmme/: pa_win_wmme.c
portaudio/src/os/win/: pa_win_util.c
scoring/: Mark.cpp  Mark.hpp  Score.cpp  Score.hpp  Sources.cmake
serial/: CMakeLists.txt  Makefile  Makefile.sources  MultiSerial.cpp  MultiSerial.h  Serial.cpp  Serial.h  Sources.cmake
serial/test/: main.cpp
sockets/: Makefile.sources  Sources.cmake  TCPClient.cpp  TCPClient.h  TCPClientBase.cpp  TCPClientBase.h  TCPServer.h  TCPServerClient.cpp  TCPServerClient.h  UDPBroadcast.cpp  UDPBroadcast.hpp  common.h
sockets/demo/: Demo.cpp  DemoServerClient.cpp  DemoServerClient.h  Makefile.sources
spline/: Function.cpp  Function.h  PolySpline.cpp  PolySpline.h  Sources.cmake
stm/: .gitignore  repeated_task.py  stm.py  stm_loader.py
stm/examples/: dice_machine.py  dice_machine.yaml  dice_machine_reserialized.yaml  drunk_sailor.py  drunk_sailor.yaml  examples.py  hot_potatoe_machine.py  hot_potatoe_machine.yaml  ping_pong.py  ping_pong.yaml
test/: BenchmarkTest.cpp  CMakeLists.txt  ConfigFileTest.h  CurveTest.h  LoggingTest.h  Makefile  ObserverTest.h  ScoringTest.cpp  ScoringTest.h  SocketsTest.h  SplineTest.cpp  TestCaseTest.h  TimeStampTest.cpp  TimeStampTest.h  TimedThreadTest.h  ViewerTest.cpp  config.yml  http.cpp  main.cpp  send.sh  serial.cpp  splines.json  test-logging.cpp  test-sockets.cpp  test-state-machine.cpp  test-state-machine.h  test-timed-thread.cpp  test_timed_thread.cpp
tests/: Makefile.sources  Sources.cmake  TestCase.cpp  TestCase.h  runTests.h
tests/tests/: Makefile.sources  TestCaseTest.cpp
threading/: Condition.cpp  Condition.h  Makefile  Makefile.sources  Mutex.cpp  Mutex.h  Pollable.h  Poller.cpp  Poller.h  Sources.cmake  Thread.cpp  Thread.h  TimedThread.cpp  TimedThread.h
threading/tests/: test_timed_thread.cpp
timing/: Benchmark.cpp  Benchmark.hpp  HighResClock.cpp  HighResClock.h  Makefile  Makefile.sources  Playable.cpp  Playable.h  Player.cpp  Player.h  Sources.cmake  TickMachine.cpp  TickMachine.h  TickTimer.cpp  TickTimer.h  TimeStamp.cpp  TimeStamp.hpp  chrono.cpp  chrono.h  debug.h  sleep.cpp  sleep.h
timing/tests/: test_tick_machine.cpp
viewer/: Color.cpp  Color.hpp  Sources.cmake  Viewer.cpp  Viewer.hpp
xml/: Makefile  Makefile.sources  Sources.cmake  XMLTools.cpp  XMLTools.h
xml/TinyXml/: CMakeLists.txt  Makefile  Makefile.sources  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp  xmltest.cpp
yaml-cpp/: CMakeLists.txt
yaml-cpp/include/yaml-cpp/: aliasmanager.h
yaml-cpp/src/: aliasmanager.cpp  scanner.h
zmq/: CMakeLists.txt  Sources.cmake  ZMQClient.cpp  ZMQClient.h  ZMQContext.cpp  ZMQContext.h  ZMQPublisher.h  ZMQReader.h  ZMQServer.h  ZmqContext.cpp
zmq/builds/msvc/: msvc.sln
zmq/builds/msvc/c_local_lat/: c_local_lat.vcxproj
zmq/builds/msvc/c_local_thr/: c_local_thr.vcxproj
zmq/builds/msvc/c_remote_lat/: c_remote_lat.vcxproj
zmq/builds/msvc/c_remote_thr/: c_remote_thr.vcxproj
zmq/builds/msvc/inproc_lat/: inproc_lat.vcxproj
zmq/builds/msvc/inproc_thr/: inproc_thr.vcxproj
zmq/builds/msvc/libzmq/: libzmq.vcxproj  libzmq.vcxproj.filters
zmq/include/: zmq.h
zmq/src/: platform.hpp  stdint.hpp  tcp_address.cpp
zmq2.2/: CMakeLists.txt  files2.txt
zmq2.2/include/: zmq.h
zmq2.2/src/: files.txt  options.cpp  pipe.hpp  platform.hpp  tcp_connecter.cpp  uuid.hpp  windows.hpp  zmq_connecter.cpp
zmq3.2/: CMakeLists.txt  Makefile  ZMQClient.cpp  ZMQClient.h  config.status  libtool
zmq3.2/builds/msvc/: Makefile
zmq3.2/doc/: Makefile
zmq3.2/foreign/openpgm/: Makefile
zmq3.2/perf/: Makefile
zmq3.2/src/: Makefile  libzmq.pc  platform.hpp  tcp_address.cpp
zmq3.2/tests/: Makefile
